<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_choose_mode"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gmailbyron.ullauri.smartcart.ChooseModeActivity">

    <ImageButton
        android:id="@+id/backArrowButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_backarrow"
        android:onClick="onClick"
        android:scaleType="fitXY"
        android:visibility="visible"
        app:srcCompat="@drawable/backarrow" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/backArrowButton"
        android:textSize="22sp"
        android:layout_marginTop="1dp"
        android:layout_marginStart="10dp"
        android:id="@+id/storeName"
        android:text="@string/choose_store_2" />

    <Button
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:onClick="onClick"
        android:text="@string/continue_text" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/backArrowButton"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:layout_above="@+id/continueButton"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="10dp">

        <RadioGroup
            android:id="@+id/modeRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/defaultModeRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/mode_default"
                android:textSize="24sp"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/defaultModeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_weight="1"
                android:paddingEnd="27dp"
                android:paddingStart="34dp"
                android:text="@string/mode_default"
                android:visibility="visible" />

            <RadioButton
                android:id="@+id/budgetModeRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/mode_budget"
                android:textSize="24sp"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/budgetModeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_weight="1"
                android:paddingEnd="27dp"
                android:paddingStart="34dp"
                android:text="@string/mode_budget"
                android:visibility="gone" />

            <EditText
                android:id="@+id/budgetEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:ems="10"
                android:hint="@string/budget_hint"
                android:inputType="numberDecimal"
                android:visibility="gone" />


        </RadioGroup>
    </ScrollView>

</RelativeLayout>
